# go-ai

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  Vagrantfile
script/: run_gnugo_gtp.sh  run_go-ai_default_engine.sh  run_go-ai_random_engine.sh  twogtp_autoplay_go-ai_vs_gnugo.sh  twogtp_autoplay_go-ai_vs_go-ai.sh
src/: main.cpp
src/common/: board.cpp  board.hpp  board_test.cpp  logger.cpp  logger.hpp  logger_test.cpp
src/common/board/: README.md  basic.hpp  board_class.hpp  board_class_templ_header.hpp  board_class_templ_inst.cpp  board_grid.hpp  grid_point.hpp  group_node.hpp  pos_group.hpp
src/engines/: engine_factory.cpp  engine_factory.hpp  exampleEngine.hpp  example_engine.cpp  example_engine.hpp  rand_engine.hpp  simple_engine_base.cpp  simple_engine_base.hpp  uct_engine.hpp
